<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progress_information_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ProgressBar
        android:id="@+id/progress_intelligence"
        style="@style/Power.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intelligence_label" />

    <TextView
        android:id="@+id/intelligence_label"
        style="@style/lables_detail_info_style"
        android:text="@string/intelligence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strength_label"
        style="@style/lables_detail_info_style"
        android:text="@string/strength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_intelligence" />

    <ProgressBar
        android:id="@+id/progress_strenght"
        style="@style/Power.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strength_label" />

    <TextView
        android:id="@+id/speed_label"
        style="@style/lables_detail_info_style"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/progress_speed"
        style="@style/Power.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/speed_label"
        app:layout_constraintTop_toBottomOf="@+id/speed_label" />

    <TextView
        android:id="@+id/power_label"
        style="@style/lables_detail_info_style"
        android:text="@string/power"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/progress_speed" />

    <ProgressBar
        android:id="@+id/progress_power"
        style="@style/Power.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/power_label"
        app:layout_constraintTop_toBottomOf="@+id/power_label" />
</androidx.constraintlayout.widget.ConstraintLayout>